name:                Gists
version:             0.1.0.0
synopsis:            List Gists from the Command Line
homepage:            https://github.com/sordina/gists
license:             MIT
license-file:        LICENSE
author:              Lyndon Maydwell
maintainer:          lyndon@sordina.net
category:            Web
build-type:          Simple
cabal-version:       >=1.8

executable gists
  main-is: Gists.hs
  build-depends: base ==4.6.*, hxt ==9.3.*, HandsomeSoup ==0.3.*, http-conduit ==1.9.*, utf8-string ==0.3.*
